--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!-- app colors -->
-    <color name="messenger_primary">#215589</color>
+    <color name="messenger_primary">#4377EF</color>
     <color name="messenger_secondary">#FFFFFF</color>
-    <color name="messenger_tertiary">#C6D8E4</color>
+    <color name="messenger_tertiary">#E1EBF2</color>
     <color name="text_black">#000000</color>
     <color name="text_dark_grey">#1E1E1E</color>
     <color name="text_grey">#545454</color>
