--- a/app/app/src/main/res/values/styles.xml
+++ b/app/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
 
     <style name="signButton">
         <item name="android:background">@drawable/signing_button_rect</item>
+        <item name="android:elevation">@dimen/button_elevation</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_width">@dimen/profile_button_width</item>
         <item name="android:layout_height">@dimen/profile_button_height</item>
