--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/messenger_secondary"
-        tools:context=".view.activity.ProfileActivity">
+        tools:context=".view.fragment.ProfileActivity">
 
         <ImageView
             android:id="@+id/avatar"
