--- a/app/app/src/main/res/menu/appbar_menu.xml
+++ b/app/app/src/main/res/menu/appbar_menu.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:title="menu item 1"
+        android:id="@+id/front_page_icon"
         android:icon="@drawable/ic_action_front_page"
         app:showAsAction="ifRoom"/>
 
     <item android:title="menu item 2"
+        android:id="@+id/profile_icon"
         android:icon="@drawable/ic_action_profile"
         app:showAsAction="ifRoom"/>
 </menu>
