--- a/app/app/src/main/res/drawable/avatar_background.xml
+++ b/app/app/src/main/res/drawable/avatar_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:width="4dp"
-        android:color="#43C7EF" />
+        android:width="@dimen/chat_avatar_border_width"
+        android:color="@color/messenger_quaternary" />
     <solid android:color="@android:color/transparent" />
 </shape>
