--- a/app/app/src/main/res/drawable/send_text_button.xml
+++ b/app/app/src/main/res/drawable/send_text_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:radius="12dp"/>
+        android:radius="@dimen/chat_send_button_radius"/>
     <solid android:color="@color/text_dark_grey"/>
 </shape>
