--- a/app/app/src/main/res/drawable/typing_message_box.xml
+++ b/app/app/src/main/res/drawable/typing_message_box.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:radius="@dimen/chat_message_radius" />
-    <solid android:color="#E6E6E6"/>
+    <solid android:color="@color/messenger_quinary"/>
 </shape>
