--- a/app/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/app/src/main/res/layout/activity_sign_in.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/messenger_secondary">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/messenger_secondary"
         tools:context=".view.activity.SignInActivity">
 
 
