--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/messenger_secondary">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/messenger_secondary"
         tools:context=".view.fragment.ProfileActivity">
 
         <ImageView
@@ -27,7 +27,7 @@
         <EditText
             style="@style/signingInputBox"
             android:autofillHints="username"
-            android:hint="Your Nickname"
+            android:hint="@string/nickname_hint"
             android:id="@+id/nickname"
             android:inputType="text"
             android:layout_marginTop="@dimen/profile_inner_vertical_margin"
@@ -40,7 +40,7 @@
         <EditText
             style="@style/signingInputBox"
             android:autofillHints="name"
-            android:hint="Your Profession"
+            android:hint="@string/nickname_hint"
             android:id="@+id/profession"
             android:inputType="text"
             android:layout_marginTop="@dimen/profile_text_box_vertical_margin"
@@ -56,7 +56,7 @@
             android:layout_marginTop="@dimen/profile_inner_vertical_margin"
             android:layout_marginStart="@dimen/profile_side_margin"
             android:layout_marginEnd="@dimen/profile_side_margin"
-            android:text="Update"
+            android:text="@string/update"
             app:layout_constraintTop_toBottomOf="@+id/profession"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -67,7 +67,7 @@
             android:layout_marginTop="@dimen/profile_button_vertical_margin"
             android:layout_marginStart="@dimen/profile_side_margin"
             android:layout_marginEnd="@dimen/profile_side_margin"
-            android:text="SIGN OUT"
+            android:text="@string/sign_out"
             app:layout_constraintTop_toBottomOf="@+id/update"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
