--- a/app/app/src/main/res/values/dimens.xml
+++ b/app/app/src/main/res/values/dimens.xml
@@ -40,15 +40,25 @@
         <dimen name="fab_vertical_offset">2dp</dimen>
 
     <!-- SEARCH PAGE -->
+    <dimen name="search_large_text">16sp</dimen>
+    <dimen name="search_medium_text">14sp</dimen>
+    <dimen name="search_small_text">12sp</dimen>
     <!-- we use same text dimensions and side margin as in home page -->
         <!-- list item -->
-        <dimen name="search_profile_picture_width">25dp</dimen>
+        <dimen name="search_text_top">8dp</dimen>
+        <dimen name="search_profile_picture_width">60dp</dimen>
         <dimen name="search_list_item_height">60dp</dimen>
-        <dimen name="search_list_item_inner_vertical_margin">4dp</dimen>
+        <dimen name="search_list_item_inner_vertical_margin">2dp</dimen>
         <dimen name="search_list_item_inner_horizontal_margin">8dp</dimen>
-        <!-- search bar dimensions are the same as in home page -->
+        <dimen name="search_text_start_margin">16dp</dimen>
+        <!-- toolbar -->
+        <dimen name="search_toolbar_height">90dp</dimen>
+        <dimen name="search_box_radius">25dp</dimen>
+        <dimen name="search_box_height">50dp</dimen>
+        <dimen name="search_icon_padding">8dp</dimen>
+        <dimen name="search_toolbar_inner_vertical_margin">16dp</dimen>
         <!-- back button -->
-        <dimen name="search_back_button_width">50dp</dimen>
+        <dimen name="search_back_button_width">40dp</dimen>
 
     <!-- CHAT PAGE -->
     <dimen name="chat_side_margin">16dp</dimen>
