--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -9,13 +9,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!-- app colors -->
-    <color name="messenger_primary">#4377EF</color>
+    <color name="messenger_primary">#5479F1</color>
     <color name="messenger_secondary">#FFFFFF</color>
-    <color name="messenger_tertiary">#E1EBF2</color>
-    <color name="messenger_quaternary">#43C7EF</color>
-    <color name="messenger_quinary">#E6E6E6</color>
+    <color name="messenger_tertiary">#F3F6FF</color>
+    <color name="messenger_quaternary">#67AEF7</color>
+    <color name="messenger_quinary">#F4F4F4</color>
     <color name="text_black">#000000</color>
     <color name="text_dark_grey">#1E1E1E</color>
-    <color name="text_grey">#545454</color>
+    <color name="text_grey">#95979A</color>
     <color name="text_white">#FFFFFF</color>
 </resources>
