--- a/app/app/src/main/res/layout/fragment_front_page.xml
+++ b/app/app/src/main/res/layout/fragment_front_page.xml
@@ -44,8 +44,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/front_page_chats"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_anchorGravity="center" />
+        app:layout_anchorGravity="center"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
