--- a/app/app/src/main/res/values/styles.xml
+++ b/app/app/src/main/res/values/styles.xml
@@ -27,4 +27,13 @@
         <item name="android:textColor">@color/text_grey</item>
         <item name="android:textSize">@dimen/profile_text</item>
     </style>
+
+
+    <style name="profileImage">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:src">@drawable/avatar_placeholder</item>
+        <item name="cornerSize">50%</item>
+        <item name="cornerFamily">rounded</item>
+    </style>
 </resources>
