--- a/app/app/src/main/res/layout/chat_received.xml
+++ b/app/app/src/main/res/layout/chat_received.xml
@@ -22,7 +22,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@drawable/received_message_box"
         android:id="@+id/message_box"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/chat_space_around_text"
             android:layout_marginBottom="@dimen/chat_space_around_text"
